--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
 </head>
 <body>
     <h1>Odin recipes</h1>
-    <a href="/recipes/tarta.html">Receta de tarta</a>
-    
+    <ul>
+        <li><a href="/recipes/tarta.html">Receta de tarta</a></li>
+        <li><a href="/recipes/milanesas.html">Receta de milanesas</a></li>
+        <li><a href="/recipes/pollo.html">Receta de pollo</a></li>
+    </ul>
 </body>
 </html>
