--- a/recipes/milanesas.html
+++ b/recipes/milanesas.html
@@ -6,37 +6,40 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Tarta de jamon y queso</h1>
-    <img src="../img/pascualina.jpg">
+    <h1>Milanesas</h1>
+    <img src="../img/milanesas.jpg">
     <br>
     <br>
     <h2>Descripción</h2>
-    <p>¿Alguna vez hicieron una tarta de jamón y queso que se les desinfló? Bueno, esta vez les vamos a explicar esta PAVADA de receta, para que de ahora en más les salga siempre bien.</p>
-    <p>Pueden seguir mis pasos y hacer la masa, o bien comprarla. La masa de tarta comprada es mucho más fácil de manipular si no está super fría, así que como primer paso, les recomendaría sacarla de la heladera y dejarla a temperatura ambiente.</p>
-    <p>Es clave mezclar el jamón junto con el huevo batido, para que haga un “piso” y el queso no se vaya para el fondo, además como recompensa por seguir este paso, van a tener ese juguito divino en cada porción!</p>
-    <p>Y hablando de queso, ya que compran para esta receta aprovechen si les sobra para hacer otras recetas con este noble y amado ingrediente como Macarrones con queso para el almuerzo o Scones de queso para la merienda.</p>
-    <p>Esta es una tarta de jamón y queso base, casi que lo primero que se aprende en la vida, pero si quieren le pueden agregar más cosas, como rodajas de tomate, aceitunas, etc. Prácticamente todo va bien con nuestra tarta de jamón y queso.</p>
+    <p>Una vez rebozado el pollo, tenemos dos opciones para cocinar las milanesas: fritas o al horno. Y señoras y señores, estamos en el blog de Paulina Cocina y entonces ya deben imaginarse cual será la respuesta a esta pregunta. La mejor forma de cocinar milanesas es freirlas en abundante aceite.</p>
+    <p>Da igual si son milanesas de pollo o de carne.  aceitunas, etc. Prácticamente todo va bien con nuestra tarta de jamón y queso.</p>
     <br>
     <br>
 
     <h2>Ingredientes</h2>
     <ul>
-        <li>2 tazas de harina común</li>
-        <li>1 cucharadita de polvo para hornear</li>
-        <li>8 cucharadas de mayonesa Natura</li>
-        <li>16 cucharadas de agua bien fría o leche</li>
-        <li>Sal a gusto</li>
+        <li>8 milanesas pequeñas (yo las hice de cuadrada, pero puede ser lomo, bola de lomo, peceto, etc.)</li>
+        <li>Pan rallado (yo utilicé panko porque soy muy chic)</li>
     </ul>
+    <h3>Para marinada:</h3>
+    <ul>
+        <li>2 huevos</li>
+        <li>1 cda. de mostaza de Dijon</li>
+        <li>Jugo y ralladura de 1 limón</li>
+        <li>1 diente de ajo</li>
+        <li>Perejil picado</li>
+        <li>1 cda. de queso rallado</li>
+        <li>Sal y pimienta</li>
+    </ul>
+
     <br>
     <br>
     <h2>Pasos</h2>
     <ol>
-        <li>Rociar la tartera con rocío vegetal, en mi caso usé el de Natura y estirar una de las tapas hasta cubrir toda la superficie.</li>
-        <li>Untar una o dos cucharadas de mayonesa Natura, que es la que yo usé, en la tapa que va a ser la base de la tarta.</li>    
-        <li>Desparramar el jamón hasta cubrir toda la superficie. Agregar los trozos de queso de igual manera.</li>
-        <li>Mezclar los huevos, la crema y la sal en un bol. Volcar sobre el relleno de la tarta.</li>
-        <li>Poner la otra tapa cubriendo la tarta, pintarla con huevo batido y espolvorear con azúcar (opcional).</li>
-        <li>Cocinar en horno a 180° o 200° durante 30 minutos o hasta ver la superficie dorada.</li>    
+        <li>Lo primero que vamos a hacer es batir los huevos y agregar dentro todos los ingredientes de la marinada. Vamos a mezclar todo bien.</li>
+        <li>Siguiente: Vamos a salar las milanesas y colocarlas dentro de la marinada, tienen que quedar bien embebidas. Las vamos a tapar con papel film y las vamos a llevar a la heladera mínimo por una hora. Cuanto más, mejor.</li>    
+        <li>Pasado ese tiempo, vamos a sacarlas de la heladera. Luego, milanesa por milanesa,, vamos a empanarlas con el pan rallado, presionando de ambos lados hasta que las recubra bien.</li>
+        <li>Finalmente, lo que queda es freírlas en aceite bien caliente hasta que estén doradas y disfrutarlas mucho.</li>
     </ol>
 
     <a href="../index.html">Home</a>
